<resources>
    <string name="app_name">Nearly</string>
    <string name="google_server_client_id">868005733233-6d4fdtl8npfv39967p0jhlvhbvpc9a4j.apps.googleusercontent.com</string>
    <string name="app_logo_accessibility_desc">Logo</string>
    <string name="friends">Friends</string>
    <string name="logout">Logout</string>
    <string name="network_error">Please check your internet connection</string>
    <string name="server_unreachable">Server not responding, try again later</string>
    <string name="generic_login_error">Login failed</string>
    <string name="add_friend">Add friend</string>
    <string name="video_icon_content_desc">Start video call</string>
    <string name="settings">Settings</string>
    <string name="logging_out">Logging out…</string>
    <string name="waiting_for_confirmation">Waiting for confirmation…</string>
    <string name="connecting">Connecting…</string>
    <string name="waiting_for_friend">Waiting for friend…</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="incoming_call">Incoming call</string>
    <string name="end_call">End call</string>
    <string name="channel_description">Nearly notification channel</string>
    <string name="default_notification_channel_id">nearly_channel</string>
    <string name="enter_email">enter email</string>
    <string name="send_request">Send request</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="busy">Busy</string>
    <string name="support_us">Support us</string>
    <string name="clear">clear</string>
    <string name="friend_requests">Friend requests</string>
    <string name="no_results">no results</string>
    <string name="search">Search</string>
    <string name="initialization_failed">Initialization failed…</string>
    <string name="friend">Friend</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="test_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="failed_to_load_friends">Failed to load friends</string>
    <string name="failed_to_load_incoming_requests">Failed to load requests</string>
    <string name="waiting_for_server_connection">Waiting for server connection…</string>
    <string name="decline">Decline</string>
    <string name="play_game">Play game</string>
    <string name="finishing_call">Finishing call…</string>
    <string name="mute_self">mute self</string>
    <string name="calling">calling…</string>
    <string name="load_more">Load more</string>
    <string name="removing_request_failed">Removing request failed</string>
    <string name="oof_no_app_user_id">Oof… Seems like you still don\'t have a user id </string>
    <string name="enter_user_id">enter user id</string>
    <string name="create">Create</string>
    <string name="success">Success</string>
    <string name="operation_failed">Operation failed</string>
    <string name="id_already_exists">ID already exists</string>
    <string name="login">Login</string>
    <string name="block">Block</string>
    <string name="delete">delete</string>
    <string name="failed_to_block">Failed to block</string>
    <string name="failed_to_delete">Failed to delete</string>
    <string name="profile">Profile</string>
    <string name="name_colon">Name:</string>
    <string name="id_colon">ID:</string>
    <string name="blocked">Blocked</string>
    <string name="failed">failed</string>
    <string name="adding">Adding</string>
    <string name="blocking">Blocking</string>
    <string name="responding_to_request_failed">Responding to a friend request failed</string>
    <string name="enter_name_or_user_id">enter name or user ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unblock">Unblock</string>
    <string name="unblocking_failed">Unblocking failed</string>
    <string name="blocked_users">Blocked users</string>
    <string name="failed_to_load_blocked_users">Failed to load blocked users</string>
    <string name="bio_colon">Bio:</string>
</resources>
