<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/video_call_motionlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    app:layoutDescription="@xml/activity_video_call_scene"
    tools:context=".activity.VideoCallActivity">


    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/remote_gl_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/local_gl_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/end_call_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:contentDescription="@string/end_call"
        app:srcCompat="@drawable/ic_call_end_24dp"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mute_self_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/darker_gray"
        android:contentDescription="@string/mute_self"
        app:layout_constraintBottom_toTopOf="@+id/play_game_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_volume_up_24"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play_game_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:contentDescription="@string/play_game"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/end_call_btn"
        app:srcCompat="@drawable/ic_baseline_videogame_asset_24"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/call_status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="603dp" />


</androidx.constraintlayout.motion.widget.MotionLayout>